JSAPI-3738: Forward and back links z-index fix

--- a/styles/style.less
+++ b/styles/style.less
@@ -541,6 +541,7 @@
                 }
             .features__list-item-section_is-bottom_true {
                 position: relative;
+                z-index: 3;
                 }
                 .features__header {
                     margin: 0 0 13px 0;
